Fix Short URL generation
- The salt is now correctly loaded from the configuration file.
- Short URLs are now prefixed with the domain (e.g "s1" becomes "https://vh7.uk/s1") on all API endpoints
- Base URL has been removed from frontend Vue and moved to backend (see above)

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,6 +4,11 @@
       "name": "vh7.short-url-salt",
       "type": "java.lang.String",
       "description": "Salt for converting database IDs to Short URLs and vice-versa. Anything random works as long as it does not change."
+    },
+    {
+      "name": "vh7.url",
+      "type": "java.lang.String",
+      "description": "The URL where VH7 is running including final slash (http://localhost:8080/ for development, https://vh7.uk/ for the official instance)."
     }
   ]
 }
