--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,11 +1,13 @@
 # These properties are meant for a production environment.
 
 spring.datasource.url=jdbc:mysql://${VH7_MYSQL_HOST}:${VH7_MYSQL_PORT}/${VH7_MYSQL_DATABASE}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${VH7_MYSQL_USERNAME}
 spring.datasource.password=${VH7_MYSQL_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.show-sql=false
 
 vh7.short-url-salt=${VH7_SHORTURL_SALT}
+vh7.url=${VH7_URL}
