Add URL Normalization
Shortened URLs are now normalized so that, for example: https://example.com and https://example.com/ are now considered different and will not create duplicates in the database.

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>io.mola.galimatias</groupId>
+            <artifactId>galimatias</artifactId>
+            <version>0.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
