Add database migrations
Fixes #1

--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ webargs = "*"
 marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 timeloop = "*"
+flask-migrate = "*"
 
 [requires]
 python_version = "3.7"
