--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,7 @@ steps:
   - name: test
     image: python:3.7-alpine
     commands:
+      - apk add --no-cache mariadb-dev g++
       - pip install --upgrade pip pipenv
       - pipenv install --dev
       - pipenv run flake8
