--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,7 @@
+[bumpversion]
+current_version = 0.1.2
+commit = True
+tag = True
+
 [flake8]
-docstring-convention=google
+docstring-convention = google
