--- a/.drone.yml
+++ b/.drone.yml
@@ -16,6 +16,8 @@ steps:
       - pipenv install --dev
       - pipenv run flake8
       - pipenv run pytest -svv
+      - python -c "import config;import os;print('latest'+(','+config.VERSION if 'DRONE_TAG' in os.environ else ''))" > .tags
+      - cat .tags
   - name: release-docker
     image: plugins/docker
     settings:
@@ -23,7 +25,3 @@ steps:
       password:
         from_secret: docker_password
       repo: jakewalker/vh7
-      auto_tag: true
-    when:
-      event:
-        - tag
