--- a/Pipfile
+++ b/Pipfile
@@ -9,22 +9,24 @@ flake8-eradicate = "*"
 flake8-docstrings = "*"
 pytest = "*"
 bump2version = "*"
+pytest-dependency = "*"
+pytest-assume = "*"
 
 [packages]
-flask = "*"
-sqlalchemy = "*"
-flask-sqlalchemy = "*"
-flask-marshmallow = "*"
-flask-cors = "*"
-hashids = "*"
-url-normalize = "*"
-webargs = "*"
-marshmallow = "*"
-marshmallow-sqlalchemy = "*"
-timeloop = "*"
-flask-migrate = "*"
-gunicorn = "*"
-mysqlclient = "*"
+flask = "~=1.1.1"
+sqlalchemy = "~=1.3.15"
+flask-sqlalchemy = "~=2.4.1"
+flask-marshmallow = "~=0.11.0"
+flask-cors = "~=3.0.8"
+hashids = "~=1.2.0"
+url-normalize = "~=1.4.1"
+webargs = "~=5.5.2"
+marshmallow = "~=3.5.1"
+marshmallow-sqlalchemy = "~=0.22.3"
+timeloop = "~=1.0.2"
+flask-migrate = "~=2.5.3"
+gunicorn = "~=20.0.4"
+mysqlclient = "~=1.4.6"
 
 [requires]
 python_version = "3.7"
