--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,11 @@ timeloop = "~=1.0.2"
 flask-migrate = "~=2.5.3"
 gunicorn = "~=20.0.4"
 mysqlclient = "~=1.4.6"
+flask-login = "~=0.5.0"
+passlib = "~=1.7.2"
+flask-wtf = "~=0.14.3"
+itsdangerous = "~=1.1.0"
+flask-mail = "~=0.9.1"
 
 [requires]
 python_version = "3.7"
