--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,7 @@ flask-wtf = "~=0.14.3"
 itsdangerous = "~=1.1.0"
 flask-mail = "~=0.9.1"
 flask-qrcode = "*"
+markdown2 = "*"
 
 [requires]
 python_version = "3.8"
