--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ python-multipart = "*"
 hashids = "*"
 passlib = "*"
 python-jose = {extras = ["cryptography"], version = "*"}
+aiofiles = "*"
 
 [requires]
 python_version = "3.8"
