--- a/Pipfile
+++ b/Pipfile
@@ -4,25 +4,26 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-flake8 = "*"
 mypy = "*"
+flake8 = "*"
+flake8-eradicate = "*"
+flake8-docstrings = "*"
 
 [packages]
-fastapi = "*"
-uvicorn = "*"
-sqlalchemy = "*"
-alembic = "*"
-email-validator = "*"
-python-dotenv = "*"
-python-multipart = "*"
-passlib = "*"
-python-jose = {extras = ["cryptography"], version = "*"}
-aiofiles = "*"
-logzero = "*"
-pydantic = "*"
-mysqlclient = "*"
-nanoid = "*"
-url-normalize = "*"
+fastapi = "~=0.63.0"
+uvicorn = "~=0.13.3"
+sqlalchemy = "~=1.3.22"
+alembic = "~=1.4.3"
+python-multipart = "~=0.0.5"
+passlib = "~=1.7.4"
+python-jose = {extras = ["cryptography"], version = "~=3.2.0"}
+aiofiles = "~=0.6.0"
+logzero = "~=1.6.3"
+pydantic = "~=1.7.3"
+mysqlclient = "~=2.0.3"
+url-normalize = "~=1.4.3"
+python-dotenv = "~=0.15.0"
+email-validator = "~=1.1.2"
 
 [requires]
 python_version = "3.8"
