Generate links from adjective and nouns

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,12 @@ jobs:
         run: pip install pipenv
       - name: Install dependencies
         run: pipenv install --system --dev
-      # - name: Type checking
-      #   run: mypy main.py
+      - name: Type checking
+        run: mypy --disallow-untyped-defs .
       - name: Lint
         run: flake8
+      - name: Test
+        run: pytest -svv
 
   release:
     runs-on: ubuntu-latest
