--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ mypy = "*"
 flake8 = "*"
 flake8-eradicate = "*"
 flake8-docstrings = "*"
+pytest = "*"
 
 [packages]
 fastapi = "~=0.63.0"
@@ -25,6 +26,3 @@ url-normalize = "~=1.4.3"
 python-dotenv = "~=0.15.0"
 email-validator = "~=1.1.2"
 fastapi-utils = "~=0.2.1"
-
-[requires]
-python_version = "3.8"
