--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,9 +1,11 @@
 version = 1
 
-# test_patterns = ["*/test/**"]
+test_patterns = [
+  "test/**"
+]
 
 exclude_patterns = [
-    "alembic/**"
+  "alembic/**"
 ]
 
 [[analyzers]]
