Add type definitions

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,13 @@
 [mypy]
 plugins = pydantic.mypy
 ignore_missing_imports = True
+disallow_untyped_defs = True
+
+[mypy-alembic.*,alembic.versions.*]
+ignore_errors = True
+
+[mypy-test.*]
+ignore_errors = True
 
 [flake8]
 docstring-convention = google
