Fix type definitions
Fix mypy config

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,12 +2,7 @@
 plugins = pydantic.mypy
 ignore_missing_imports = True
 disallow_untyped_defs = True
-
-[mypy-alembic.*,alembic.versions.*]
-ignore_errors = True
-
-[mypy-test.*]
-ignore_errors = True
+exclude = ^(alembic|test)
 
 [flake8]
 docstring-convention = google
