--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: pipenv install --system --dev
       - name: Type checking
-        run: mypy --disallow-untyped-defs .
+        run: mypy .
       - name: Lint
         run: flake8
       - name: Test
