--- a/Pipfile
+++ b/Pipfile
@@ -26,4 +26,5 @@ url-normalize = "~=1.4.3"
 python-dotenv = "~=0.15.0"
 email-validator = "~=1.1.2"
 fastapi-utils = "~=0.2.1"
-dynaconf = "*"
+dynaconf = "~=3.1.4"
+requests = "~=2.25.1"
