--- a/settings.toml
+++ b/settings.toml
@@ -1,5 +1,12 @@
 database = "sqlite:///data.db"
 
+[auth]
+url = "http://localhost:9001"
+algorithms = ["RS256"]
+audience = "vh7"
+issuer = "vh7.uk"
+user_info_endpoint = "{this.auth.url}/oauth2/userinfo"
+
 [instance]
 url = "http://localhost:8000"
 app_url = "http://localhost:3000"
