Update container registry

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Build & Push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v5.2
         with:
-          image: docker.pkg.github.com/quark-links/quark-server/server
+          image: ghcr.io/quark-links/server
           tags: latest,v1
-          registry: docker.pkg.github.com
-          username: jakewalker
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
